[package]
name = "potpot"
version = "0.1.0"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
anyhow = "1"
crc = "*"
thiserror = "1"
rand = "0.7"
serde = "1"
twox-hash = "1.5.0"
bitvec = "0.17"